# kaffeine

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .travis.yml  AUTHORS  CMakeLists.txt  Changelog  Dockerfile  INSTALL  NOTES  README  README.md  TODO  kaffeine-docker.sh  kaffeine.cpp  kaffeine.h  kaffeineui.rc  main.cpp  maintabs.cpp  maintabs.h  mainwindow.cpp  mainwindow.h  manager.cpp  manager.h  mediawidget.cpp  mediawidget.h  scantable.dvb  tabmanager.cpp  tabmanager.h
.github/workflows/: ci.yml
cmake/modules/: FindLibV4L2.cmake  FindLibdvbv5.cmake  FindVLC.cmake
deviceactions/: CMakeLists.txt  kaffeine_play_audiocd.desktop  kaffeine_play_dvd.desktop  kaffeine_play_videocd.desktop
doc/: .gitignore  CMakeLists.txt  index.docbook  man-kaffeine.1.docbook
dtvdaemon/: CMakeLists.txt  connection.cpp  connection.h  dtvdaemon.cpp  dtvdaemon.h  log.cpp  log.h  main.cpp
dvb/: dvbchannel.cpp  dvbchannel.h
icons/: CMakeLists.txt
include/: dmx.h  frontend.h  linuxtypes.h
po/ar/: kaffeine.po
po/be/: kaffeine.po
po/bg/: kaffeine.po
po/bs/: kaffeine.po
po/ca/: kaffeine.po
po/ca/docs/kaffeine/: index.docbook  man-kaffeine.1.docbook
po/ca@valencia/: kaffeine.po
po/cs/: kaffeine.po
po/da/: kaffeine.po
po/de/: kaffeine.po
po/de/docs/kaffeine/: index.docbook  man-kaffeine.1.docbook
po/el/: kaffeine.po
po/en_GB/: kaffeine.po
po/eo/: kaffeine.po
po/es/: kaffeine.po
po/et/: kaffeine.po
po/eu/: kaffeine.po
po/fi/: kaffeine.po
po/fr/: kaffeine.po
po/ga/: kaffeine.po
po/gl/: kaffeine.po
po/he/: kaffeine.po
po/hi/: kaffeine.po
po/hr/: kaffeine.po
po/hu/: kaffeine.po
po/ia/: kaffeine.po
po/id/: kaffeine.po
po/id/docs/kaffeine/: man-kaffeine.1.docbook
po/is/: kaffeine.po
po/it/: kaffeine.po
po/it/docs/kaffeine/: index.docbook  man-kaffeine.1.docbook
po/ja/: kaffeine.po
po/ka/: kaffeine.po
po/km/: kaffeine.po
po/ko/: kaffeine.po
po/ku/: kaffeine.po
po/lt/: kaffeine.po
po/mai/: kaffeine.po
po/mr/: kaffeine.po
po/nb/: kaffeine.po
po/nds/: kaffeine.po
po/nl/: kaffeine.po
po/nl/docs/kaffeine/: index.docbook  man-kaffeine.1.docbook
po/nn/: kaffeine.po
po/pa/: kaffeine.po
po/pl/: kaffeine.po
po/pt/: kaffeine.po
po/pt/docs/kaffeine/: index.docbook  man-kaffeine.1.docbook
po/pt_BR/: kaffeine.po
po/pt_BR/docs/kaffeine/: index.docbook  man-kaffeine.1.docbook
po/ro/: kaffeine.po
po/ru/: kaffeine.po
po/sa/: kaffeine.po
po/se/: kaffeine.po
po/sk/: kaffeine.po
po/sl/: kaffeine.po
po/sl/docs/kaffeine/: index.docbook  man-kaffeine.1.docbook
po/sq/: kaffeine.po
po/sr/: kaffeine.po
po/sr@ijekavian/: kaffeine.po
po/sr@ijekavianlatin/: kaffeine.po
po/sr@latin/: kaffeine.po
po/sv/: kaffeine.po
po/sv/docs/kaffeine/: index.docbook  man-kaffeine.1.docbook
po/th/: kaffeine.po
po/tr/: kaffeine.po
po/ug/: kaffeine.po
po/uk/: kaffeine.po
po/uk/docs/kaffeine/: index.docbook  man-kaffeine.1.docbook
po/zh_CN/: kaffeine.po
po/zh_TW/: kaffeine.po
profiles/: CMakeLists.txt  kaffeine.profile.xml
src/: .gitignore  CMakeLists.txt  Messages.sh  abstractmediawidget.cpp  abstractmediawidget.h  config-kaffeine.h.cmake  config.h.in  configuration.cpp  configuration.h  configurationdialog.cpp  configurationdialog.h  configurationdialog_p.h  datetimeedit.cpp  datetimeedit.h  dbusobjects.cpp  dbusobjects.h  engine.cpp  engine.h  engine_phonon.cpp  engine_phonon.h  ensurenopendingoperation.cpp  ensurenopendingoperation.h  iso-codes.cpp  iso-codes.h  iso639.cpp  iso639.h  kaffeine.appdata.xml  kaffeine.cpp  kaffeine.desktop  kaffeine.h  kaffeine.qrc  kaffeine4.desktop  kaffeine4ui.rc  kaffeineui.rc  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  manager.cpp  (+22 more)
src/backend-mplayer/: mplayermediawidget.cpp  mplayermediawidget.h  mplayervideowidget.cpp  mplayervideowidget.h
src/backend-vlc/: vlcmediawidget.cpp  vlcmediawidget.h  vlcmediawidget_p.h
src/backend-xine/: xineapplication.cpp  xineapplication.h  xinecommands.cpp  xinecommands.h  xinemediawidget.cpp  xinemediawidget.h  xinemediawidget_p.h
src/dvb/: dvbbackenddevice.h  dvbcam_linux.cpp  dvbcam_linux.h  dvbchannel.cpp  dvbchannel.h  dvbchannel_p.h  dvbchanneldialog.cpp  dvbchanneldialog.h  dvbchanneldialog_p.h  dvbchannelui.cpp  dvbchannelui.h  dvbchannelui_p.h  dvbchannelview.cpp  dvbchannelview.h  dvbconfig.cpp  dvbconfig.h  dvbconfigdialog.cpp  dvbconfigdialog.h  dvbdevice.cpp  dvbdevice.h  dvbdevice_debug.cpp  dvbdevice_debug.h  dvbdevice_linux.cpp  dvbdevice_linux.h  dvbdevice_linux_interface.cpp  dvbdevice_linux_interface.h  dvbdevice_p.h  dvbepg.cpp  dvbepg.h  dvbepg_p.h  dvbepgdialog.cpp  dvbepgdialog.h  dvbepgdialog_p.h  dvbliveview.cpp  dvbliveview.h  dvbliveview_p.h  dvbmanager.cpp  dvbmanager.h  dvbmanager_p.h  dvbrecording.cpp  (+22 more)
src/playlist/: playlistmodel.cpp  playlistmodel.h  playlisttab.cpp  playlisttab.h
tools/: .gitignore  CMakeLists.txt  build-kaffeine.sh  convertscanfiles.cpp  dvbsi.xml  map_xmltv_channels.sh  po2html  update_dvbsi.sh  update_headers.sh  update_icons.sh  update_l10n.sh  update_mimetypes.sh  update_scanfile.sh  update_source.sh  updatedvbsi.cpp  updatemimetypes.cpp  updatesource.cpp
