add_executable(convertscanfiles convertscanfiles.cpp ../src/dvb/dvbtransponder.cpp)
add_executable(updatedvbsi updatedvbsi.cpp)
add_executable(updatemimetypes updatemimetypes.cpp)
add_executable(updatesource updatesource.cpp)

if( Qt5Core_DIR )
    target_link_libraries(convertscanfiles Qt5::Core)
    target_link_libraries(updatedvbsi Qt5::Core Qt5::Xml)
    target_link_libraries(updatemimetypes Qt5::Core )
    target_link_libraries(updatesource Qt5::Core)
else()
    target_link_libraries(convertscanfiles ${QT_QTCORE_LIBRARY})
    target_link_libraries(updatedvbsi ${QT_QTCORE_LIBRARY} ${QT_QTXML_LIBRARY})
    target_link_libraries(updatemimetypes ${QT_QTCORE_LIBRARY} ${KDE4_KDECORE_LIBS})
    target_link_libraries(updatesource ${QT_QTCORE_LIBRARY})
endif()
